@@ -4,31 +4,35 @@ import com.example.musiccatalog.dto.AlbumDto;
 import com.example.musiccatalog.mapper.AlbumMapper;
 import com.example.musiccatalog.repository.AlbumRepository;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class AlbumService {
-    private final AlbumRepository albumRepository;
-    private final AlbumMapper albumMapper;
 
-    public AlbumService(AlbumRepository albumRepository, AlbumMapper albumMapper) {
-        this.albumRepository = albumRepository;
-        this.albumMapper = albumMapper;
+    private final AlbumRepository repository;
+    private final AlbumMapper mapper;
+
+    public AlbumService(AlbumRepository repository, AlbumMapper mapper) {
+        this.repository = repository;
+        this.mapper = mapper;
     }
 
     public List<AlbumDto> findAll() {
-        return albumRepository.findAll().stream()
-                .map(albumMapper::toDto)
-                .collect(Collectors.toList());
+        return repository.findAll()
+                .stream()
+                .map(mapper::toDto)
+                .toList();
     }
 
     public Optional<AlbumDto> findById(Long id) {
-        return albumRepository.findById(id).map(albumMapper::toDto);
+        return repository.findById(id)
+                .map(mapper::toDto);
     }
 
     public Optional<AlbumDto> findByTitle(String title) {
-        return albumRepository.findByTitle(title).map(albumMapper::toDto);
+        return repository.findByTitle(title)
+                .map(mapper::toDto);
     }
 }
